fix style
- add truncate to table text
- change card height

--- a/app/assets/stylesheets/atoms/_card.sass
+++ b/app/assets/stylesheets/atoms/_card.sass
@@ -1,7 +1,7 @@
 .cards
   &--search-form
     overflow-y: auto
-    height: 600px
+    height: 631px
   &--note
     overflow-y: auto
     height: 759px
